envoy/envoy_old.yaml
admin:
    access_log_path: /tmp/admin_access.log
    address:
      socket_address: { address: 0.0.0.0, port_value: 9901 }


static_resources:
    listeners:
    - name: listener_0
    address:
        socket_address: { address: 0.0.0.0, port_value: 9090 }
    filter_chains:
    - filters:
        - name: envoy.http_connection_manager
        typed_config:
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/" }
                route:
                    cluster: services
                    max_grpc_timeout: 0s
                cors:
                allow_origin:
                - "*"
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                expose_headers: grpc-status,grpc-message
            http_filters:
            - name: envoy.grpc_web
            - name: envoy.cors
            - name: envoy.router
clusters:
- name: services
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: localhost, port_value: 50051 }}]
